--- a/frontend/src/pages/header/Header.css
+++ b/frontend/src/pages/header/Header.css
@@ -1,6 +1,6 @@
 /* pages/header/Header.css */
 .header {
-    background:#2c3e50;
+    background:#090909;
     padding: 2rem 3rem;
     color: white;
     display: flex;
