--- a/frontend/src/pages/footer/Footer.css
+++ b/frontend/src/pages/footer/Footer.css
@@ -1,6 +1,6 @@
   /* pages/footer/Footer.css */
   .footer {
-    background:#000000;
+    background:#2c3e50;
     color: white;
     font-size: 1.5rem;
     padding: 1.5rem;
